--- a/managment-system/src/main/resources/application.properties
+++ b/managment-system/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.show-sql = true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+
+## redis properties
+
+spring.redis.host= 127.0.0.1
+spring.redis.port= 6379
